css/common.css
/** BOOTSTRAP HACKS **/
.container-fluid {
    margin: 0;
    padding: 0;
}

.no-gutters {
  margin-right: 0;
  margin-left: 0;
}

.no-gutters > [class*="col-"] {
  padding-right: 0;
  padding-left: 0;
}
/** END BOOTSTRAP HACKS **/

html {
    font-size: 14px;
}

.Header {
    position: relative;
}

.Header__nav {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    background: transparent;
    border: none;
    padding: 0 1rem;
}

.Header__slider {
    height: 100%;
}

.MySlider__carousel {
    position: relative;
}

.MySlider__title {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: #fff;
    text-align: center;
    text-transform: capitalize;
}

.MySlider__learn-more {
    position: absolute;
    width: 100%;
    bottom: 10%;
    color: #fff;
    text-align: center;
}

#home .MySlider__image {
    width: 100%;
    height: 100%;
}

#home .MyNav__link {
    color: #7FAABB;
}

#home .MyNav__dropdown-button {
    color: #7FAABB;
}

#home .open .MyNav__dropdown-button {
    background-color: #000;
}

#home .MyNav__dropdown-list {
    background-color: #000;
    border: 1px solid #fff;
}

#home .MyNav__dropdown-list .MyNav__link:hover {
    background-color: #7FAABB;
    color: #000;
}

.Section__title {
    color: #B1E9EE;
    font-size: 1rem;
    text-align: center;
    font-weight: bold;
    margin: 7rem 0 1rem 0;
}

.Section__subtitle {
    color: #6A6756;
    text-align: center;
    font-size: 2rem;
    margin: 1rem 0 2rem 0;
}

.LatestNews__details {
    padding: 2rem;
    box-shadow: 0px 5px 20px 2px #FAFAFA;
}

.LatestNews__image {
    width: 100%;
}

.LatestNews__category {
    color: #B1E9EE;
    font-size: 1rem;
    text-align: center;
    font-weight: bold;
}

.LatestNews__title {
    padding: 1rem;
    color: #333;
    font-size: 1.5rem;
    text-align: center;
}

.LatestNews__snippet {
    color: #CCC;
    font-size: 1rem;
    text-align: center;
}

.Footer {
    background-color:#67686A;
    padding: 3rem;
}

.Footer__links {
    font-size: 1rem;
    margin: 0;
    padding: 1rem 0;
}

.Footer__listitem {
    list-style-type: none;
    margin: 10px 0px;
}

.Footer__link {
    color: #D4D5D7;
    outline: none;
    text-decoration: none;
}

.Footer__link:hover {
    color: #FFF;
    text-decoration: underline;
}

.Section {
    padding-bottom: 5rem;
}

.MegakitInfo {
    color: #D4D5D7;
    font-size: 14px;
    text-align: left;
    padding: 1rem 0;
}

.MegakitInfo__title {
    text-align: left;
    font-weight: bold;
    color: #fff;
    margin-top: 0;
    font-size: 15px;
    padding-top: 0;
}

.MegakitPowered {
    padding: 1rem;
}

.MegakitPowered__highlight {
    color: #07a4c4;
}

